--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "material-ui": "^0.18.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-mdl": "^1.10.3",
     "react-redux": "^5.0.5",
     "react-tap-event-plugin": "^2.0.1"
   },
